--- a/jugar-2.html
+++ b/jugar-2.html
@@ -32,13 +32,13 @@
     </div>
 </nav>
 
-<canvas id="myCanvas">
-
-</canvas>
-
 <div class="clearfix"></div>
 
+
 <section id="section_Jugar_2">
+    <div class="canvas">
+        <canvas id="myCanvas" width="0" height="0"></canvas>
+    </div>
     <div id="borde_tablero" class="tablero">
         <table id="tablero" align="center">
             <tr id="f1" class="fila">
