--- a/jugar.html
+++ b/jugar.html
@@ -20,6 +20,12 @@
 </header>
 <div id="formulario" align="center">
     <form>
+
+        <p id="formulario_nombre">
+            <label for="formulario_nombre"><b>Nombre: </b></label>
+            <input type="text" id="nombre" placeholder="Ingrese su nombre">
+        </p>
+
         <p id="formulario_dificultad">
             <label for="formulario_dificultad"><b>Dificultad: </b></label>
             <input type="radio" name="dificultad" class="input" value="facil" id="radio_facil" onclick="Dificultad(this.value)"> <label class="formulario_dificultad" for="radio_facil">Facil</label>
