--- a/jugar.html
+++ b/jugar.html
@@ -23,7 +23,7 @@
 
         <p id="formulario_nombre">
             <label for="formulario_nombre"><b>Nombre: </b></label>
-            <input type="text" id="nombre" placeholder="Ingrese su nombre">
+            <input type="text" id="nombre" placeholder="Ingrese su nombre" onkeypress="txNombres()">
         </p>
 
         <p id="formulario_dificultad">
