--- a/jugar-2.html
+++ b/jugar-2.html
@@ -41,6 +41,7 @@
     </div>
     <div id="borde_tablero" class="tablero">
         <table id="tablero" align="center">
+            <caption id="captionTablero">Tablero Sudoku</caption>
             <tr id="f1" class="fila">
                 <td id="E1" class="Esquina"><input id="1" class="celda" onchange="Tablero(this.id,this.value)"></td>
                 <td class="borde_1"><input id="2" class="celda" onchange="Tablero(this.id,this.value)"></td>
