--- a/Desktop (sketch-wireframe)/Wireframe.drawio.html
+++ b/Desktop (sketch-wireframe)/Wireframe.drawio.html
@@ -1,6 +1,6 @@
 <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=5,IE=9" ><![endif]-->
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 <title>Wireframe</title>
 <meta charset="utf-8"/>
