--- a/jugar.html
+++ b/jugar.html
@@ -55,7 +55,7 @@
 
         <p id="formulario_nombre">
             <label for="formulario_nombre"><b>Nombre: </b></label>
-            <input type="text" id="nombre" placeholder="Ingrese su nombre" onkeypress="txNombres()">
+            <input type="text" id="nombre" placeholder="Ingrese su nombre" onkeypress="txNombres()" maxlength="30">
         </p>
     </form>
 </div>
